--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToDoList</title>
+    <script src="./index.js"></script>
+</head>
+<body>
+    <div class="container">
+        <input type="text" id="in">
+        <button id="add">Добавить</button>
+        <hr>
+        <div id="out"></div>
+    </div>
+    
+</body>
+</html>
