--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <input type="text" id="in">
         <button id="add">Добавить</button>
+        <button id="removeAll">Стереть все</button>
         <hr>
         <div id="out"></div>
     </div>
