feat: add code from W3School

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         <button id="removeAll">Стереть все</button>
         <hr>
         <div id="out"></div>
+        <hr>
+        <!-- ____ ЭКСПЕРИМЕНТЫ ___ -->
+        <h3 id="born">Я родился...</h3>
     </div>
+    <script>
+        // ____ ЭКСПЕРИМЕНТЫ ___
+        var myTag = document.getElementById("born");
+        console.log(myTag.tagName);
+    </script>
     
 </body>
 </html>
