--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" id="in">
+        <input type="text" placeholder="Введите новое дело... " id="in">
         <button id="add">Добавить</button>
         <button id="removeAll">Стереть все</button>
         <hr>
