--- a/katrina-neva.html
+++ b/katrina-neva.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <style>
+        * {
+            box-sizing: border-box;
+        }
         body {
             background-color: #a7ffda;
             font-size: 18px;
@@ -16,16 +19,116 @@
             width: 800px;
             margin: 0 auto;
         }
+        ul {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+        ul li {
+            cursor: pointer;
+            position: relative;
+            padding: 12px 8px 12px 40px;
+            background: #eee;
+            font-size: 18px;
+            transition: 0.2s;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+        ul li:nth-child(odd) {
+            background: #f9f9f9;
+        }
+
+        ul li:hover {
+            background: #ddd;
+        }
+
+        ul li.checked {
+            background: #888;
+            color: #fff;
+            text-decoration: line-through;
+        }
+        ul li.checked::before {
+            content: '';
+            position: absolute;
+            border-color: #fff;
+            border-style: solid;
+            border-width: 0 2px 2px 0;
+            top: 10px;
+            left: 16px;
+            transform: rotate(45deg);
+            height: 15px;
+            width: 7px;
+        }
+        .close {
+            position: absolute;
+            right: 0;
+            top: 0;
+            padding: 12px 16px 12px 16px;
+        }
+
+        .close:hover {
+            background-color: #f44336;
+            color: white;
+        }
+
+        .header {
+            background-color: #000;
+            padding: 30px 40px;
+            color: white;
+            text-align: center;
+        }
+
+        .header:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        input {
+            border: none;
+            width: 75%;
+            padding: 10px;
+            float: left;
+            font-size: 16px;
+        }
+
+        .addBtn {
+            padding: 10px;
+            width: 25%;
+            background: #d9d9d9;
+            color: #555;
+            float: left;
+            text-align: center;
+            font-size: 16px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        .addBtn:hover {
+            background-color: #bbb;
+        }
     </style>
+
 
     <div class="wrapper">
         <h1>ToDoList-Katrina</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi deleniti sapiente quia, sunt molestias quas odit assumenda facilis fugiat temporibus rem quod beatae doloremque nisi ad necessitatibus quibusdam aut molestiae eaque. Atque facilis nemo dolore esse consectetur harum, molestias quibusdam repellat eum dolorum obcaecati.</p>
-        <p>RRRRRRRR</p>
+        <input type="text" placeholder="Введите новое дело..." id="toDoEl">
+        <span class="addBtn" onclick="newElement()">Добавить</span>
+        <ul id="list">
+            <li>Hit the gym</li>
+            <li class="checked">Pay bills</li>
+            <li>Meet George</li>
+        </ul>
     </div>
-    
+
+
     <script>
         console.log("HeLLO, WorLD!")
+        // __ в переменную _LIST_ получаем тэг _UL_
+        var List = document.querySelector('ul');
     </script>
 </body>
 </html>
