feat: add katrina-2

--- a/katrina-neva.html
+++ b/katrina-neva.html
@@ -173,6 +173,8 @@
             var span = document.createElement('SPAN');
             // __ затем нужно создать текст, который будет в этом СПАНЕ
             var txt = document.createTextNode("X");
+            // __
+            span.className = "close";
         }
 
 
